loading recipes from folder

--- a/HtmlGenerator/HtmlGenerator.csproj
+++ b/HtmlGenerator/HtmlGenerator.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="recipesXml\sqlserver.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="2.6.362" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
