added fitler for values in blockly

--- a/BlocklyClasses/BlocklyClasses.csproj
+++ b/BlocklyClasses/BlocklyClasses.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\ReceiverDB\ReceiverDB.csproj" />
     <ProjectReference Include="..\ReiceverDBStmtSqlServer\ReiceverDBStmtSqlServer.csproj" />
     <ProjectReference Include="..\StankinsInterfaces\StankinsInterfaces.csproj" />
+    <ProjectReference Include="..\Transformers\Transformers.csproj" />
   </ItemGroup>
 
 </Project>
