--- a/.gitignore
+++ b/.gitignore
@@ -291,3 +291,4 @@ StankinsTests/appsettings.json
 StankinsTests/appsettings.json
 StankinsTests/appsettings.json
 StankinsTests/appsettings.json
+/HtmlGenerator/a.bat
