loading programming languages

--- a/.gitignore
+++ b/.gitignore
@@ -292,3 +292,4 @@ StankinsTests/appsettings.json
 StankinsTests/appsettings.json
 StankinsTests/appsettings.json
 /HtmlGenerator/a.bat
+/HtmlGenerator/LoadTable.csv
