--- a/HtmlGenerator/HtmlGenerator.csproj
+++ b/HtmlGenerator/HtmlGenerator.csproj
@@ -5,7 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="recipesXml\loadTableFromInternet.txt">
+    <Content Include="recipesXml\loadDateProgrammingLanguages.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="recipesXml\loadFileSignatures.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="recipesXml\sqlserver.txt">
