now not found tables

--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,5 @@ StankinsTests/appsettings.json
 StankinsTests/appsettings.json
 /HtmlGenerator/a.bat
 /HtmlGenerator/LoadTable.csv
+/HtmlGenerator/Department.csv
+/HtmlGenerator/www.bnro.ro
