--- a/StankinsInterfaces/StankinsInterfaces.csproj
+++ b/StankinsInterfaces/StankinsInterfaces.csproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\StankinsInterfaces.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Xml.XPath" Version="4.3.0" />
   </ItemGroup>
