--- a/SenderDBStmtSqlServer/SenderDBStmtSqlServer.csproj
+++ b/SenderDBStmtSqlServer/SenderDBStmtSqlServer.csproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\SenderDBStmtSqlServer.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.3.1" />
   </ItemGroup>
