--- a/SenderoToDBSqlServer/SenderToDBSqlServer.csproj
+++ b/SenderoToDBSqlServer/SenderToDBSqlServer.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.3.1" />
   </ItemGroup>
