--- a/SenderElasticSearch/SenderElasticSearch.csproj
+++ b/SenderElasticSearch/SenderElasticSearch.csproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\SenderElasticSearch.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NEST" Version="5.5.0" />
   </ItemGroup>
