added phone producers

--- a/HtmlGenerator/HtmlGenerator.csproj
+++ b/HtmlGenerator/HtmlGenerator.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="recipesXml\phoneProducers.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="recipesXml\androidList.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
