added utcnow and guid

--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,4 @@ StankinsTests/appsettings.json
 /HtmlGenerator/LoadTable.csv
 /HtmlGenerator/Department.csv
 /HtmlGenerator/www.bnro.ro
+/HtmlGenerator/package-lock.json
