addex rename columns and table

--- a/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
+++ b/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\ReceiverFile\ReceiverFile.csproj" />
     <ProjectReference Include="..\ReceiverHTML\ReceiverHTML.csproj" />
     <ProjectReference Include="..\SenderConsole\SenderConsole.csproj" />
+    <ProjectReference Include="..\StankinsOffice\StankinsOffice.csproj" />
     <ProjectReference Include="..\TransformerGrouping\TransformerGrouping.csproj" />
   </ItemGroup>
 
