--- a/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
+++ b/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,11 +12,15 @@
     <ProjectReference Include="..\ReceiverFile\ReceiverFile.csproj" />
     <ProjectReference Include="..\ReceiverHTML\ReceiverHTML.csproj" />
     <ProjectReference Include="..\SenderConsole\SenderConsole.csproj" />
+    <ProjectReference Include="..\SenderInterpretedRazor\SenderInterpretedRazor.csproj" />
     <ProjectReference Include="..\StankinsOffice\StankinsOffice.csproj" />
     <ProjectReference Include="..\TransformerGrouping\TransformerGrouping.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="sqliteCreation.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="OneTab.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
