json and sqlite cration

--- a/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
+++ b/stankinsv2/solution/StankinsVariousConsoleDemo/StankinsVariousConsoleDemo.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="jsonCreation.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="sqliteCreation.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
