--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,16 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet pack interfaces'
+  inputs:
+    command: pack
+
+    packagesToPack: '**/Stankins.*.csproj'
+
+    versioningScheme: byBuildNumber
+  
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+
