--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ steps:
 
 - task: DotNetCoreInstaller@0 
     displayName: 'Use .NET Core sdk 2.1.300' 
-    inputs:  version: 2.1.300
+    inputs:  
+      version: 2.1.300
 
 - task: NuGetToolInstaller@0
 
