executing at regular intervals

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -3,16 +3,25 @@
   "MonitorData": {
     "PingAddresses": [
       {
-        "NameSite": "www.yahoo.com"
+        "NameSite": "www.yahoo.com",
+        "CRON": "*/30 * * * * *"
       },
       {
-        "NameSite": "www.qwezxcasdadasda.com"
+        "NameSite": "www.qwezxcasdadasda.com",
+        "CRON": "*/30 * * * * *"
+
       }
 
     ],
     "WebAdresses": [
-      { "URL": "https://api.ipify.org/?format=json" },
-      { "URL": "https://www.qwezxcasdadasda.com/?format=json" }
+      {
+        "URL": "https://api.ipify.org/?format=json",
+        "CRON": "*/30 * * * * *"
+      },
+      {
+        "URL": "https://www.qwezxcasdadasda.com/?format=json",
+        "CRON": "*/30 * * * * *"
+      }
     ]
   },
   "Logging": {
