--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsStatusWeb.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsStatusWeb.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cronos" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
