--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -4,23 +4,50 @@
     "PingAddresses": [
       {
         "NameSite": "www.yahoo.com",
-        "CRON": "*/30 * * * * *"
+        "CRON": "*/30 * * * * *",
+        "CustomData": {
+          "Tags": [ "yahoo", "ping" ],
+          "Name": "yahoo"
+        }
+        
       },
       {
         "NameSite": "www.qwezxcasdadasda.com",
-        "CRON": "*/30 * * * * *"
+        "CRON": "*/30 * * * * *",
+        "CustomData": {
+          "Tags": [ "notfound", "ping" ],
+          "Name": "not found website"
+        }
+      },
+      {
+        "NameSite": "www.ipify.org",
+        "CRON": "*/30 * * * * *",
 
+        "CustomData": {
+          "Tags": [ "ipify", "ping" ],
+          "Name": "ipify website"
+        }
       }
 
     ],
     "WebAdresses": [
       {
         "URL": "https://api.ipify.org/?format=json",
-        "CRON": "*/30 * * * * *"
+        "CRON": "*/30 * * * * *",
+
+        "CustomData": {
+          "Tags": [ "api", "ipify" ],
+          "Name": "ipify api"
+        }
       },
       {
         "URL": "https://www.qwezxcasdadasda.com/?format=json",
-        "CRON": "*/30 * * * * *"
+        "CRON": "*/30 * * * * *",
+        "CustomData": {
+          "Tags": [ "notfound", "web" ],
+          "Name": "ipify api"
+        }
+       
       }
     ]
   },
