now with databases

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -47,10 +47,30 @@
           "Tags": [ "notfound", "web" ],
           "Name": "ipify api"
         }
-       
+
       }
-    ]
-  },
+    ],
+    "Databases": [
+      {
+        "ConnectionString": "Server=.;Database=master;Trusted_Connection=True;",
+        "CRON": "* */5 * * * *",
+        "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+        "CustomData": {
+          "Tags": [ "sqlserver", "database" ],
+          "Name": "local server"
+        }
+      },
+        {
+          "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
+          "CRON": "* */5 * * * *",
+          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+          "CustomData": {
+            "Tags": [ "sqlserver", "notfound" ],
+            "Name": "not found server"
+          }
+        }
+        ]
+      },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
