--- a/stankinsv2/solution/StankinsV2/StankinsVariousConsole/StankinsVariousConsole.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsVariousConsole/StankinsVariousConsole.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.Process\Stankins.Process.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
+    <ProjectReference Include="..\Stankins.WLW\Stankins.WLW.csproj" />
     <ProjectReference Include="..\Stankins.XML\Stankins.XML.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
   </ItemGroup>
