--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/angular.json
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/angular.json
@@ -26,7 +26,9 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
