--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/package.json
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/package.json
@@ -25,6 +25,7 @@
     "@aspnet/signalr": "^1.0.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
