--- a/stankinsv2/solution/Dockerfile
+++ b/stankinsv2/solution/Dockerfile
@@ -2,7 +2,7 @@
 #FROM microsoft/dotnet:aspnetcore-runtime
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
 WORKDIR /root/  
-COPY docker .
+COPY $(Build.ArtifactStagingDirectory)\win10-x64 .
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000/tcp
 CMD ["StankinsAliveMonitor.exe"]  
