--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,11 @@ steps:
    dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c Release -r win10-x64 
   displayName: 'DOTNET publish'    
   
+ - script: |
+  docker build stankinsv2/solution/Dockerfile -t stankins   
+  displayName: 'docker'    
+ 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
+  
 
