--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,7 +77,7 @@ steps:
   displayName: 'DOTNET publish'    
   
 - script: |
-   docker build stankinsv2/solution/ -t stankins 
+   docker build --build-arg Build.ArtifactStagingDirectory stankinsv2/solution/ -t stankins 
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
