--- a/stankinsv2/solution/Dockerfile
+++ b/stankinsv2/solution/Dockerfile
@@ -1,5 +1,7 @@
 
 #FROM microsoft/dotnet:aspnetcore-runtime
+ARG Build.ArtifactStagingDirectory
+RUN echo "staging dir $Build.ArtifactStagingDirectory"
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
 WORKDIR /root/  
 COPY $(Build.ArtifactStagingDirectory)\\win10-x64 .
