--- a/stankinsv2/solution/Dockerfile
+++ b/stankinsv2/solution/Dockerfile
@@ -1,10 +1,10 @@
 
 #FROM microsoft/dotnet:aspnetcore-runtime
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
-ARG Build.ArtifactStagingDirectory
-RUN echo "staging dir $Build.ArtifactStagingDirectory"
+ARG BuildArtifactStagingDirectory
+RUN echo "staging dir ${BuildArtifactStagingDirectory}"
 WORKDIR /root/  
-COPY $(Build.ArtifactStagingDirectory)\\win10-x64 .
+COPY $(BuildArtifactStagingDirectory)\\win10-x64 .
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000/tcp
 CMD ["StankinsAliveMonitor.exe"]  
