--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,7 @@ steps:
   displayName: 'DOTNET publish'    
   
 - script: |
+   xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I 
    docker build --build-arg BuildArtifactStagingDirectory=$(Build.ArtifactStagingDirectory) stankinsv2/solution/ -t stankins 
   displayName: 'docker'    
  
