--- a/stankinsv2/solution/Dockerfile
+++ b/stankinsv2/solution/Dockerfile
@@ -1,7 +1,7 @@
 
 #FROM microsoft/dotnet:aspnetcore-runtime
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
-ORKDIR /root/  
+WORKDIR /root/  
 COPY win10-x64 .
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000/tcp
