--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,8 +77,11 @@ steps:
   displayName: 'DOTNET publish'    
   
 - script: |
-   xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I 
-   docker build stankinsv2/solution/ -t stankins 
+   cd stankinsv2/solution/
+   dir
+   xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I  
+   dir
+   docker build . -t stankins 
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
