--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,6 +83,7 @@ steps:
    dir
    docker build . -t stankins
    echo "$MY_PASSWORD_DOCKER" | docker login --username ignatandrei --password-stdin
+   docker push ignatandrei/stankinsWindows
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
