--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,9 +81,9 @@ steps:
    dir
    xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I  
    dir
-   docker build . -t stankinsWindows
+   docker build . -t stankins_windows
    echo $MY_PASSWORD_DOCKER| docker login --username ignatandrei --password-stdin
-   docker push ignatandrei/stankinsWindows
+   docker push ignatandrei/stankins_windows
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
