--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,8 +82,9 @@ steps:
    xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I  
    dir
    docker build . -t stankins_windows
+   docker image ls
    echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
-   docker push ignatandrei/stankins_windows:latest
+   docker push ignatandrei/stankins_windows
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
