--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,23 +69,33 @@ steps:
   displayName: 'dotnet pack interfaces'
   inputs:
     command: pack
-
     packagesToPack: '**/Stankins.*.csproj'
 
 - script: |
    dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c Release -r win10-x64 
+   dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c release -r linux-x64 
   displayName: 'DOTNET publish'    
   
 - script: |
    cd stankinsv2/solution/
    dir
    xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I  
+   xcopy $(Build.ArtifactStagingDirectory)\linux-x64 linux-x64\ /I  
    dir
-   docker build . -t stankins_windows
+    echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
+   
+   docker build . -t stankins_windows -f Dockerfile_win
    docker image ls
    docker tag stankins_windows ignatandrei/stankins_windows
-   echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
    docker push ignatandrei/stankins_windows
+
+
+   docker build . -t stankins_linux -f Dockerfile_linux
+   docker image ls
+   docker tag stankins_linux ignatandrei/stankins_linux
+   #echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
+   docker push ignatandrei/stankins_linux
+
   displayName: 'docker'    
  
 - task: PublishBuildArtifacts@1
