--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,14 +73,14 @@ steps:
 
 - script: |
    dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c Release -r win10-x64 
-   dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c release -r linux-x64 
+   #dotnet publish stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c release -r linux-x64 
   displayName: 'DOTNET publish'    
   
 - script: |
    cd stankinsv2/solution/
    dir
    xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I  
-   xcopy $(Build.ArtifactStagingDirectory)\linux-x64 linux-x64\ /I  
+   #xcopy $(Build.ArtifactStagingDirectory)\linux-x64 linux-x64\ /I  
    dir
     echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
    
