--- a/stankinsv2/solution/Dockerfile_win
+++ b/stankinsv2/solution/Dockerfile_win
@@ -3,6 +3,7 @@
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
 WORKDIR /root/  
 COPY win10-x64/ ./
+COPY win10-x64/wwwroot ./wwwroot
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000/tcp
 CMD ["StankinsAliveMonitor.exe"]  
