--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="selfcontained-linux-x64\**" />
+    <Content Remove="selfcontained-linux-x64\**" />
+    <EmbeddedResource Remove="selfcontained-linux-x64\**" />
+    <None Remove="selfcontained-linux-x64\**" />
+  </ItemGroup>
  <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
   </ItemGroup> 
