--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -45,7 +45,7 @@
         "CRON": "*/30 * * * * *",
         "CustomData": {
           "Tags": [ "notfound", "web" ],
-          "Name": "ipify api"
+          "Name": "not found get request"
         }
 
       }
@@ -66,7 +66,7 @@
           "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
           "CustomData": {
             "Tags": [ "sqlserver", "notfound" ],
-            "Name": "not found server"
+            "Name": "not found database server"
           }
         }
         ]
