--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -7,7 +7,8 @@
         "CRON": "*/30 * * * * *",
         "CustomData": {
           "Tags": [ "yahoo", "ping" ],
-          "Name": "yahoo"
+          "Name": "yahoo",
+          "Icon": "computer"
         }
         
       },
@@ -16,7 +17,8 @@
         "CRON": "*/30 * * * * *",
         "CustomData": {
           "Tags": [ "notfound", "ping" ],
-          "Name": "not found website"
+          "Name": "not found website",
+          "Icon": "computer"
         }
       },
       {
@@ -25,7 +27,8 @@
 
         "CustomData": {
           "Tags": [ "ipify", "ping" ],
-          "Name": "ipify website"
+          "Name": "ipify website",
+          "Icon": "computer"
         }
       }
 
@@ -37,7 +40,8 @@
 
         "CustomData": {
           "Tags": [ "api", "ipify" ],
-          "Name": "ipify api"
+          "Name": "ipify api",
+          "Icon": "http"
         }
       },
       {
@@ -45,7 +49,8 @@
         "CRON": "*/30 * * * * *",
         "CustomData": {
           "Tags": [ "notfound", "web" ],
-          "Name": "not found get request"
+          "Name": "not found get request",
+          "Icon": "http"
         }
 
       }
@@ -57,7 +62,8 @@
         "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
         "CustomData": {
           "Tags": [ "sqlserver", "database" ],
-          "Name": "local server"
+          "Name": "local server",
+          "Icon": "library_books"
         }
       },
         {
@@ -66,7 +72,8 @@
           "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
           "CustomData": {
             "Tags": [ "sqlserver", "notfound" ],
-            "Name": "not found database server"
+            "Name": "not found database server",
+            "Icon": "library_books"
           }
         }
         ]
