--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
 - script: |
  echo $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 #https://docs.microsoft.com/en-us/azure/devops/pipelines/build/options?view=vsts&tabs=yaml
+displayName: 'variables'
 
 - task: DotNetCoreInstaller@0
   displayName: 'Use .NET Core sdk 2.1.300'
@@ -24,8 +25,8 @@ steps:
 
 - script: |
    dotnet tool install  --tool-path . dotnet-property
-   .\dotnet-property "**/Stankinsv2/**/Stankins*.csproj" Version:"1.0.0.3"
-  displayName: 'DOTNET SAY'
+   .\dotnet-property "Stankinsv2/**/Stankins*.csproj" Version:"1.0.0.3"
+  displayName: 'DOTNET property'
 
 - task: NuGetToolInstaller@0
 
