adding user name

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -1,6 +1,8 @@
 {
 
   "MonitorData": {
+    
+    "UserName":  "default",
     "PingAddresses": [
       {
         "NameSite": "www.yahoo.com",
@@ -10,7 +12,7 @@
           "Name": "yahoo",
           "Icon": "computer"
         }
-        
+
       },
       {
         "NameSite": "www.qwezxcasdadasda.com",
@@ -66,18 +68,18 @@
           "Icon": "library_books"
         }
       },
-        {
-          "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
-          "CRON": "* */5 * * * *",
-          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
-          "CustomData": {
-            "Tags": [ "sqlserver", "notfound" ],
-            "Name": "not found database server",
-            "Icon": "library_books"
-          }
+      {
+        "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
+        "CRON": "* */5 * * * *",
+        "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+        "CustomData": {
+          "Tags": [ "sqlserver", "notfound" ],
+          "Name": "not found database server",
+          "Icon": "library_books"
         }
-        ]
-      },
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
